[gd_scene load_steps=30 format=2]

[ext_resource path="res://areas/chunk_content.gd" type="Script" id=1]
[ext_resource path="res://_glb/chunks/chunk073.glb" type="PackedScene" id=2]
[ext_resource path="res://entities/env/copper/palace1.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/env/copper/palace2.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/control/dswitch.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/control/door.gd" type="Script" id=6]
[ext_resource path="res://entities/env/copper/copper_fountain.tscn" type="PackedScene" id=7]
[ext_resource path="res://entities/enemies/deathgnat.tscn" type="PackedScene" id=8]
[ext_resource path="res://items/bug_pickup.tscn" type="PackedScene" id=9]
[ext_resource path="res://material/env/copper/copper_corroded.material" type="Material" id=10]
[ext_resource path="res://entities/env/copper/cart_large.tscn" type="PackedScene" id=11]
[ext_resource path="res://material/env/copper/copper_cleaned.tres" type="Material" id=12]
[ext_resource path="res://items/gem_pickup.tscn" type="PackedScene" id=13]
[ext_resource path="res://entities/env/copper/crate1.tscn" type="PackedScene" id=14]
[ext_resource path="res://items/random_ammo_pickup.tscn" type="PackedScene" id=15]
[ext_resource path="res://items/coat_pickup.tscn" type="PackedScene" id=16]
[ext_resource path="res://entities/env/copper/scrap_pile1.tscn" type="PackedScene" id=17]
[ext_resource path="res://entities/wardrobe.tscn" type="PackedScene" id=18]
[ext_resource path="res://entities/enemies/crawly.tscn" type="PackedScene" id=19]
[ext_resource path="res://dialog/side_content/race/race_generic.dialog" type="Resource" id=20]
[ext_resource path="res://games/race.gd" type="Script" id=21]
[ext_resource path="res://entities/visual/flag.tscn" type="PackedScene" id=22]
[ext_resource path="res://dialog/side_content/race/race_coat_trade.dialog" type="Resource" id=23]
[ext_resource path="res://entities/env/stone/hut.tscn" type="PackedScene" id=24]
[ext_resource path="res://entities/npc/npc.tscn" type="PackedScene" id=25]

[sub_resource type="SphereShape" id=6]
radius = 3.0

[sub_resource type="Curve3D" id=3]
_data = {
"points": PoolVector3Array( -16.6713, 1.7998, -8.87752, 16.6713, -1.7998, 8.87752, -2.64394, 5.87488, 2.52101, -10.8565, -0.289429, -4.34464, 10.8565, 0.289429, 4.34464, 25.1814, 12.9118, 14.8905, -2.67993, -1.28033, -9.85751, 2.67993, 1.28033, 9.85751, 44.5975, 14.8583, 31.5422, -0.550812, 0.0211182, -6.09224, 0.550812, -0.0211182, 6.09224, 44.0779, 34.4088, 75.6706, -10.4049, 0.191383, -5.18811, 10.4049, -0.191383, 5.18811, 58.8569, 35.9904, 99.5304, -11.0181, -0.365143, -0.74395, 11.0181, 0.365143, 0.74395, 85.6207, 36.4325, 109.626, -3.77458, -18.8133, 7.66135, 3.77458, 18.8133, -7.66135, 109.205, 80.6122, 75.0593, -6.31059, -1.55713, 9.99365, 6.31059, 1.55713, -9.99365, 134.969, 107.421, 39.8892 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "Activate"
length = 40.0
tracks/0/type = "value"
tracks/0/path = NodePath("..:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 40 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0201, 0.999 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="chunk073" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="apt001" parent="." index="0"]
material/0 = ExtResource( 10 )

[node name="apt002" parent="." index="1"]
material/0 = ExtResource( 10 )

[node name="apt003" parent="." index="2"]
material/0 = ExtResource( 10 )

[node name="apt" parent="." index="3"]
material/0 = ExtResource( 10 )

[node name="apt004" parent="." index="4"]
material/0 = ExtResource( 10 )

[node name="apt005" parent="." index="5"]
material/0 = ExtResource( 10 )

[node name="apt006" parent="." index="6"]
material/0 = ExtResource( 10 )

[node name="apt007" parent="." index="7"]
material/0 = ExtResource( 10 )

[node name="apt008" parent="." index="8"]
material/0 = ExtResource( 10 )

[node name="apt009" parent="." index="9"]
material/0 = ExtResource( 10 )

[node name="apt010" parent="." index="10"]
material/0 = ExtResource( 10 )

[node name="apt011" parent="." index="11"]
material/0 = ExtResource( 10 )

[node name="apt012" parent="." index="12"]
material/0 = ExtResource( 10 )

[node name="apt013" parent="." index="13"]
material/0 = ExtResource( 10 )

[node name="apt014" parent="." index="14"]
material/0 = ExtResource( 10 )

[node name="weird-thing" parent="." index="15"]
material/0 = ExtResource( 10 )

[node name="buildings2" parent="." index="16"]
material/0 = ExtResource( 10 )

[node name="CSGBox" type="CSGBox" parent="." index="17"]
transform = Transform( 0.837154, 0, -0.546966, 0, 1, 0, 0.546966, 0, 0.837154, 272.508, 492.806, -113.696 )
use_collision = true
collision_layer = 257
width = 38.7822
height = 135.373
depth = 39.1897
material = ExtResource( 10 )

[node name="CSGBox2" type="CSGBox" parent="CSGBox" index="0"]
transform = Transform( -0.2502, 0, 0.968194, 0, 1, 0, -0.968194, 0, -0.2502, -123.619, -24.8133, 28.8533 )
width = 35.7937
material = ExtResource( 10 )

[node name="CSGBox4" type="CSGBox" parent="CSGBox" index="1"]
transform = Transform( -0.2502, 0, 0.968194, 0, 1, 0, -0.968194, 0, -0.2502, -123.619, -21.58, 28.8533 )
width = 35.7937
material = ExtResource( 10 )

[node name="CSGBox6" type="CSGBox" parent="CSGBox" index="2"]
transform = Transform( -0.2502, -6.30928e-08, 0.968194, 0, 1, 6.51654e-08, -0.968194, 1.63044e-08, -0.2502, -124.48, -21.9902, 29.0758 )
width = 35.7937
height = 3.55303
material = ExtResource( 10 )

[node name="CSGBox3" type="CSGBox" parent="CSGBox" index="3"]
transform = Transform( -0.2502, 0, 0.968194, 0, 1, 0, -0.968194, 0, -0.2502, -128.757, -48.5106, 9.27734 )
width = 13.6756
height = 61.5112
depth = 20.4573
material = ExtResource( 10 )

[node name="CSGBox5" type="CSGBox" parent="CSGBox" index="4"]
transform = Transform( -0.2502, 0, 0.968194, 0, 1, 0, -0.968194, 0, -0.2502, -118.941, -48.5106, 47.2611 )
width = 13.6756
height = 61.5112
depth = 20.4573
material = ExtResource( 10 )

[node name="CSGBox7" type="CSGBox" parent="CSGBox" index="5"]
transform = Transform( -0.0326686, 0, 0.999466, 0, 1, 0, -0.999466, 0, -0.0326686, -52.369, 0.752167, 79.8041 )
width = 31.6994
height = 8.45684
depth = 19.6106
material = ExtResource( 10 )

[node name="CSGBox8" type="CSGBox" parent="CSGBox" index="6"]
transform = Transform( 0.0368928, 0, 0.999319, 0, 1, 0, -0.999319, 0, 0.0368928, -21.2137, 62.0702, -8.14276 )
width = 17.3432
height = 2.52951
depth = 9.96288
material = ExtResource( 10 )

[node name="CSGCylinder" type="CSGCylinder" parent="CSGBox" index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -47.3147, -27.2113, 105.183 )
radius = 19.2476
height = 68.2123
material = ExtResource( 10 )

[node name="CSGCylinder3" type="CSGCylinder" parent="CSGBox" index="8"]
transform = Transform( 0.797047, 0, 0.603917, 0, 1, 0, -0.603917, 0, 0.797047, -54.5659, -36.3765, 49.5276 )
radius = 19.2476
height = 86.2131
material = ExtResource( 10 )

[node name="CSGCylinder2" type="CSGCylinder" parent="CSGBox" index="9"]
transform = Transform( 0.775364, -0.631515, -2.76044e-08, 0, -4.37114e-08, 1, -0.631515, -0.775364, -3.38922e-08, -88.2722, -6.81793, 72.5719 )
radius = 3.34016
height = 20.812
material = ExtResource( 10 )

[node name="CSGCylinder3" type="CSGCylinder" parent="CSGBox/CSGCylinder2" index="0"]
transform = Transform( 1, -8.74228e-08, -1.19209e-07, 1.19209e-07, -4.37114e-08, 1, -8.74228e-08, -1, -4.37114e-08, 0, 0, -34.5471 )
radius = 2.71479
height = 68.621
material = ExtResource( 10 )

[node name="CSGCylinder4" type="CSGCylinder" parent="CSGBox/CSGCylinder2/CSGCylinder3" index="0"]
transform = Transform( 1, -8.74228e-08, -5.96046e-08, -8.74228e-08, -1, 1.07778e-07, -5.96046e-08, -1.07778e-07, -1, 1.52588e-05, -42.5944, -5.847 )
radius = 2.02124
height = 11.3092
material = ExtResource( 10 )

[node name="CSGCylinder5" type="CSGCylinder" parent="CSGBox/CSGCylinder2/CSGCylinder3/CSGCylinder4" index="0"]
transform = Transform( -3.99689e-08, 0.866025, -0.5, -1, -3.35337e-08, 2.18557e-08, 2.16072e-09, 0.5, 0.866025, -2.8273, 2.07907, -1.27403 )
radius = 0.842394
height = 9.58515
material = ExtResource( 10 )

[node name="CSGBox" type="CSGBox" parent="CSGBox" index="10"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.476135, 68.1169, 18.7643 )
width = 34.9399
height = 4.9135
material = ExtResource( 10 )

[node name="zone_city" type="Spatial" parent="." index="18"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 123.974, 457.08, -179.568 )

[node name="copper_fountain" parent="zone_city" index="0" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -23.5077, 2.57816, -5.61581 )

[node name="copper_fountain2" parent="zone_city" index="1" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 147.947, 104.368, 64.7923 )

[node name="hut" parent="zone_city" index="2" instance=ExtResource( 24 )]
transform = Transform( 0.944774, 0, 0.327722, 0, 1, 0, -0.327722, 0, 0.944774, 77.738, 35.726, 177 )

[node name="scrap_pile1" parent="zone_city" index="3" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -29.5003, -8.50299, -10.223 )

[node name="palace1" parent="zone_city" index="4" instance=ExtResource( 3 )]
transform = Transform( -0.675899, -0.10704, 0.72918, 0, 0.989397, 0.145239, -0.736994, 0.0981666, -0.668732, -146.924, 6.617, 111.712 )

[node name="palace2" parent="zone_city/palace1" index="1" instance=ExtResource( 4 )]
transform = Transform( 1, 3.72529e-09, -5.96046e-08, 7.45058e-09, 0.997739, -0.0672071, 2.98023e-08, 0.067207, 0.997739, -0.0764618, 18.1543, -0.421249 )

[node name="palace3" parent="zone_city/palace1/palace2" index="1" instance=ExtResource( 4 )]
transform = Transform( -0.395862, -2.37487e-08, -0.91831, -0.0700909, 0.997083, 0.0302145, 0.915631, 0.076326, -0.394707, 1.24206, 18.8798, -0.644577 )

[node name="active_entities" type="Spatial" parent="." index="20"]

[node name="race" type="Spatial" parent="active_entities" index="0"]
transform = Transform( -0.432157, 0, 0.901798, 0, 1, 0, -0.901798, 0, -0.432157, 37.4105, 417.054, -224.892 )
script = ExtResource( 21 )
bronze_seconds = 120.0
silver_seconds = 60.0
gold_seconds = 42.0
bronze_reward = 8
silver_reward = 10
gold_reward = 15
min_rarity = 2
max_rarity = 4
required_items = [ "wep_wave_shot" ]
checkpoints = [ NodePath("checkpoint") ]

[node name="npc" parent="active_entities/race" index="0" instance=ExtResource( 25 )]
transform = Transform( 0.813991, 0, -0.580877, 0, 1, 0, 0.580877, 0, 0.813991, -63.112, 48.5491, -43.8414 )
dialog = ExtResource( 23 )
no_dialog_trigger = true

[node name="npc_race" parent="active_entities/race" index="1" instance=ExtResource( 25 )]
transform = Transform( -0.810251, 0, 0.586084, 0, 1, 0, -0.586084, 0, -0.810251, -2.9404, -1.45642, 4.2953 )
dialog = ExtResource( 20 )

[node name="race_start" type="Position3D" parent="active_entities/race" index="2"]
transform = Transform( 0.868882, 0, -0.495019, 0, 1, 0, 0.495019, 0, 0.868882, -1.26973, -1.39563, 2.64958 )

[node name="checkpoint" type="Area" parent="active_entities/race" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -64.4716, 49.2465, -43.3146 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="active_entities/race/checkpoint" index="0"]
shape = SubResource( 6 )

[node name="race_end" type="Area" parent="active_entities/race" index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -107.586, 100.36, -141.059 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="active_entities/race/race_end" index="0"]
shape = SubResource( 6 )

[node name="flag" parent="active_entities/race/race_end" index="1" instance=ExtResource( 22 )]

[node name="zone_city" type="MultiMeshSystem" parent="active_entities" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.05176e-05, 443.04, -123.419 )

[node name="random_ammo_pickup" parent="active_entities/zone_city" index="0" instance=ExtResource( 15 )]
transform = Transform( 0.999847, 0, 0.0174775, 0, 1, 0, -0.0174775, 0, 0.999847, 39.2883, 18.5938, -21.6315 )
generate_on_ready = true
regenerate_on_death = true

[node name="random_ammo_pickup2" parent="active_entities/zone_city" index="1" instance=ExtResource( 15 )]
transform = Transform( 0.999847, 0, 0.0174775, 0, 1, 0, -0.0174775, 0, 0.999847, 39.2443, 18.5938, -20.6325 )
generate_on_ready = true
regenerate_on_death = true

[node name="random_ammo_pickup3" parent="active_entities/zone_city" index="2" instance=ExtResource( 15 )]
transform = Transform( 0.999847, 0, 0.0174775, 0, 1, 0, -0.0174775, 0, 0.999847, 39.2004, 18.5938, -19.6335 )
generate_on_ready = true
regenerate_on_death = true

[node name="random_ammo_pickup4" parent="active_entities/zone_city" index="3" instance=ExtResource( 15 )]
transform = Transform( 0.999847, 0, 0.0174775, 0, 1, 0, -0.0174775, 0, 0.999847, 39.2883, -25.5202, -63.1035 )
generate_on_ready = true
regenerate_on_death = true

[node name="random_ammo_pickup5" parent="active_entities/zone_city" index="4" instance=ExtResource( 15 )]
transform = Transform( 0.999847, 0, 0.0174775, 0, 1, 0, -0.0174775, 0, 0.999847, 39.2443, -25.5202, -62.1045 )
generate_on_ready = true
regenerate_on_death = true

[node name="random_ammo_pickup6" parent="active_entities/zone_city" index="5" instance=ExtResource( 15 )]
transform = Transform( 0.999847, 0, 0.0174775, 0, 1, 0, -0.0174775, 0, 0.999847, 39.2004, -25.5202, -61.1055 )
generate_on_ready = true
regenerate_on_death = true

[node name="bug_pickup" parent="active_entities/zone_city" index="6" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 262.496, 117.452, 22.4505 )

[node name="bug_pickup2" parent="active_entities/zone_city" index="7" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 273.379, 119.158, 10.2645 )

[node name="bug_pickup3" parent="active_entities/zone_city" index="8" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 270.422, 119.158, 7.24049 )

[node name="bug_pickup4" parent="active_entities/zone_city" index="9" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 261.29, 113.101, -13.7865 )

[node name="bug_pickup5" parent="active_entities/zone_city" index="10" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 193.784, 56.4958, 17.2595 )

[node name="bug_pickup6" parent="active_entities/zone_city" index="11" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 178.831, 51.6258, 38.3996 )

[node name="bug_pickup7" parent="active_entities/zone_city" index="12" instance=ExtResource( 9 )]
transform = Transform( 0.975153, 0, 0.221535, 0, 1, 0, -0.221535, 0, 0.975153, 157.008, 26.2658, -41.9565 )

[node name="bug_pickup8" parent="active_entities/zone_city" index="13" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 163.39, 32.4158, -49.0325 )

[node name="crawly" parent="active_entities/zone_city" index="14" instance=ExtResource( 19 )]
transform = Transform( 0.420156, 0, 0.907452, 0, 1, 0, -0.907452, 0, 0.420156, 107.169, 5.5368, -52.2705 )

[node name="bug_pickup9" parent="active_entities/zone_city" index="15" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 90.1399, 6.25281, -59.3595 )

[node name="coat_pickup" parent="active_entities/zone_city" index="16" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 90.778, 5.5368, -64.3505 )
min_rarity = 1
max_rarity = 2

[node name="wardrobe" parent="active_entities/zone_city" index="17" instance=ExtResource( 18 )]
transform = Transform( -0.868847, 0, 0.495081, 0, 1, 0, -0.495081, 0, -0.868847, 87.7467, 6.47781, -69.8935 )

[node name="gem_pickup" parent="active_entities/zone_city" index="18" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 117.673, -5.5112, -76.5985 )

[node name="gem_pickup2" parent="active_entities/zone_city" index="19" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 114.632, -5.2262, -78.9775 )

[node name="gem_pickup3" parent="active_entities/zone_city" index="20" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 112.019, -4.9762, -80.3785 )

[node name="gem_pickup4" parent="active_entities/zone_city" index="21" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 82.7644, -24.8702, -73.0205 )

[node name="gem_pickup5" parent="active_entities/zone_city" index="22" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 81.4487, -24.8702, -69.3605 )

[node name="gem_pickup6" parent="active_entities/zone_city" index="23" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 80.6541, -24.8702, -66.4165 )

[node name="gem_pickup7" parent="active_entities/zone_city" index="24" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 90.326, 15.8008, -59.5465 )

[node name="gem_pickup8" parent="active_entities/zone_city" index="25" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 93.8066, 15.8008, -57.4385 )

[node name="gem_pickup9" parent="active_entities/zone_city" index="26" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 98.1686, 15.8008, -55.4225 )

[node name="bug_pickup10" parent="active_entities/zone_city" index="27" instance=ExtResource( 9 )]
transform = Transform( 0.221655, 0, 0.975125, 0, 1, 0, -0.975125, 0, 0.221655, 119.347, 1.22382, -74.1805 )

[node name="bug_pickup11" parent="active_entities/zone_city" index="28" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 36.4688, 17.3838, -58.1105 )

[node name="bug_pickup12" parent="active_entities/zone_city" index="29" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 34.7485, 17.3838, -58.4985 )

[node name="Path" type="Path" parent="active_entities/zone_city" index="30"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 123.974, 9.50952, -56.1485 )
curve = SubResource( 3 )

[node name="PathFollow" type="PathFollow" parent="active_entities/zone_city/Path" index="0"]
transform = Transform( 0.46983, 0.0823137, 0.878819, 0, 0.995643, -0.0932404, -0.882671, 0.0438141, 0.46778, -2.64394, 5.87488, 2.52101 )
rotation_mode = 4

[node name="cart_large" parent="active_entities/zone_city/Path/PathFollow" index="0" instance=ExtResource( 11 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3.05176e-05, 0.413727, 7.62939e-06 )
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="active_entities/zone_city/Path/PathFollow/cart_large" index="6"]
playback_process_mode = 0
anims/Activate = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="CSGPolygon" type="CSGPolygon" parent="active_entities/zone_city/Path" index="1"]
polygon = PoolVector2Array( 0.321381, 0.107758, 0.430092, 0.553741, 0.724861, 0.221649 )
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 0.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
smooth_faces = true
material = ExtResource( 12 )

[node name="dswitch" parent="active_entities/zone_city" index="31" instance=ExtResource( 5 )]
transform = Transform( 0.83913, 0, -0.543931, 0, 1, 0, 0.543931, 0, 0.83913, 120.051, 15.8011, -61.8491 )
reset_upon_death = true

[node name="deathgnat" parent="active_entities/zone_city" index="32" instance=ExtResource( 8 )]
transform = Transform( -0.904215, 0, 0.427078, 0, 1, 0, -0.427078, 0, -0.904215, 154.607, 40.1104, -7.71561 )
reset_on_player_death = true
orb_speed = 10.0
orb_seeking = 1.0

[node name="deathgnat2" parent="active_entities/zone_city" index="33" instance=ExtResource( 8 )]
transform = Transform( 0.973996, 0, -0.226567, 0, 1, 0, 0.226567, 0, 0.973996, 172.076, 40.1104, -53.1224 )
reset_on_player_death = true
orb_speed = 10.0
orb_seeking = 1.0

[node name="deathgnat3" parent="active_entities/zone_city" index="34" instance=ExtResource( 8 )]
transform = Transform( 0.983868, 0, 0.178897, 0, 1, 0, -0.178897, 0, 0.983868, 230.199, 99.8539, -9.5797 )
reset_on_player_death = true
drops_coat = true
maximum_rarity = 3
health = 60
orb_cooldown = 1.0
orb_speed = 10.0
orb_seeking = 1.0

[node name="bug_pickup13" parent="active_entities/zone_city" index="35" instance=ExtResource( 9 )]
transform = Transform( 0.91878, 0, -0.39477, 0, 1, 0, 0.39477, 0, 0.91878, 158.572, 46.2642, 13.3047 )

[node name="bug_pickup14" parent="active_entities/zone_city" index="36" instance=ExtResource( 9 )]
transform = Transform( 0.653152, 0, 0.757227, 0, 1, 0, -0.757227, 0, 0.653152, 158.765, 47.5619, 15.7658 )

[node name="bug_pickup15" parent="active_entities/zone_city" index="37" instance=ExtResource( 9 )]
transform = Transform( -0.992695, 0, -0.12065, 0, 1, 0, 0.12065, 0, -0.992695, 158.975, 49.9558, 25.2041 )

[node name="bug_pickup16" parent="active_entities/zone_city" index="38" instance=ExtResource( 9 )]
transform = Transform( 0.352064, 0, 0.935976, 0, 1, 0, -0.935976, 0, 0.352064, 158.571, 57.4193, 28.4418 )
quantity = 3

[node name="bug_pickup17" parent="active_entities/zone_city" index="39" instance=ExtResource( 9 )]
transform = Transform( -0.0983492, 0, 0.995152, 0, 1, 0, -0.995152, 0, -0.0983492, 160.403, 57.7501, 27.9375 )
quantity = 3

[node name="crate1" parent="active_entities/zone_city" index="40" instance=ExtResource( 14 )]
transform = Transform( -0.975781, 0, -0.21875, 0, 1, 0, 0.21875, 0, -0.975781, 98.5487, 15.8514, -68.659 )

[node name="random_ammo_pickup" parent="active_entities/zone_city/crate1" index="3" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0140839, 0.0412292, -0.484497 )

[node name="random_ammo_pickup2" parent="active_entities/zone_city/crate1" index="4" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0140839, 0.0412292, 0.113113 )

[node name="random_ammo_pickup3" parent="active_entities/zone_city/crate1" index="5" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0141144, 0.0412292, 0.528946 )

[node name="gem_pickup" parent="active_entities/zone_city/crate1" index="6" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.285538, -0.0505371, -0.357452 )
quantity = 2

[node name="gem_pickup2" parent="active_entities/zone_city/crate1" index="7" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.341522, -0.0505371, 0.252838 )
quantity = 3

[connection signal="insta_toggled" from="active_entities/zone_city/dswitch" to="active_entities/zone_city/Path/PathFollow/cart_large" method="_on_toggled" binds= [ true ]]
[connection signal="toggled" from="active_entities/zone_city/dswitch" to="active_entities/zone_city/Path/PathFollow/cart_large" method="_on_toggled"]
